# esp32-led-ota

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  app_context.h  http_service.c  http_service.h  led_service.c  led_service.h  main.c  wifi_service.c  wifi_service.h
web/: index.html
